Commit di base del progetto

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <!-- Navbar -->   
 <nav class="navbar navbar-default" role="navigation">
 
-  <!—Logo e pulsante per barra ridimensionata -->
+  <!--Logo e pulsante per barra ridimensionata -->
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
       <span class="sr-only">Show more</span>
@@ -41,7 +41,7 @@
                     <ul class="dropdown-menu ">
                         <li><a>All Devices</a></li>
                         <li><a href="/pages/device-category.html">Categories</a></li>
-                        <li><a>Promotions</a></li>
+                        <li><a href="pages/device-promotions.html">Promotions</a></li>
                     </ul>
             </li>
             <li class="nav-item dropdown">
@@ -92,7 +92,7 @@
                 </div>
             </div>
           </div>
-        <div class="col-md-4">
+        <div class="col-md-4" >
             <div class="thumbnail">
                 <img src="img/home/blocchetto_prodotti.png">
                 <div class="caption">
@@ -115,9 +115,11 @@
         </div>
       </div>
 
-      <footer>
-        <p>&copy; 2016 TIM Company, Inc.</p>
-      </footer>
+      <footer class="footer">
+      <div class="container">
+        <p class="text-muted">&copy; Tim Company 2016</p>
+      </div>
+    </footer>
     </div> <!-- /container -->
 
 
@@ -133,4 +135,3 @@
     
   </body>
 </html>
-
