--- a/index.html
+++ b/index.html
@@ -33,38 +33,38 @@
   <!—Elementi della barra -->
   <div class="collapse navbar-collapse navbar-ex1-collapse">
     <ul class="nav navbar-nav">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Devices<span class="caret"></span></a>
                     <ul class="dropdown-menu ">
-                        <li><a>All Devices</a></li>
+                        <li><a href="/pages/all-devices.html">All Devices</a></li>
                         <li><a href="/pages/device-category.html">Categories</a></li>
-                        <li><a href="pages/device-promotions.html">Promotions</a></li>
+                        <li><a href="/pages/device-promotions.html">Promotions</a></li>
                     </ul>
             </li>
             <li class="nav-item dropdown">
               <a  class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Smart Life<span class="caret"></span></a>
                     <ul class="dropdown-menu ">
-                        <li><a>All Smart Life</a></li>
-                        <li><a>Categories</a></li>
+                        <li><a href="/pages/all-smart-life.html">All Smart Life</a></li>
+                        <li><a href="/pages/smartlife-categories.html">Categories</a></li>
                         <li><a>Promotions</a></li>
                     </ul>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Assistance Service<span class="caret"></span></a>
                     <ul class="dropdown-menu ">
-                        <li><a>All Assistance Services</a></li>
-                        <li><a>Categories</a></li>
-                        <li><a>Highlights</a></li>
+                        <li><a href="/pages/all-as.html">All Assistance Services</a></li>
+                        <li><a href="/pages/as-categories.html">Categories</a></li>
+                        <li><a href="/pages/highlights.html">Highlights</a></li>
                     </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="pages/who-we-are.html">Who we are</a>
+              <a class="nav-link" href="/pages/who-we-are.html">Who we are</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="pages/the-group.html">The Group</a>
+              <a class="nav-link" href="/pages/the-group.html">The Group</a>
             </li>
         </ul>
   </div>
