--- a/pages/who-we-are.html
+++ b/pages/who-we-are.html
@@ -17,60 +17,60 @@
     </head>
 
     <body>
-        <!-- Navbar -->
-        <nav class="navbar navbar-default" role="navigation">
+        <!-- Navbar -->   
+<nav class="navbar navbar-default" role="navigation">
 
-          <!--Logo e pulsante per barra ridimensionata -->
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-              <span class="sr-only">Show more</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="index.html"><img src="/img/logo_tim.png"></a>
-          </div>
+  <!--Logo e pulsante per barra ridimensionata -->
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+      <span class="sr-only">Show more</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <a class="navbar-brand" href="index.html"><img src="/img/logo_tim.png"></a>
+  </div>
 
-          <!—Elementi della barra -->
-          <div class="collapse navbar-collapse navbar-ex1-collapse">
-            <ul class="nav navbar-nav">
-                    <li class="nav-item active">
-                      <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Devices<span class="caret"></span></a>
-                            <ul class="dropdown-menu ">
-                                <li><a>All Devices</a></li>
-                                <li><a href="/pages/device-category.html">Categories</a></li>
-                                <li><a>Promotions</a></li>
-                            </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                      <a  class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Smart Life<span class="caret"></span></a>
-                            <ul class="dropdown-menu ">
-                                <li><a>All Smart Life</a></li>
-                                <li><a>Categories</a></li>
-                                <li><a>Promotions</a></li>
-                            </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Assistance Service<span class="caret"></span></a>
-                            <ul class="dropdown-menu ">
-                                <li><a>All Assistance Services</a></li>
-                                <li><a>Categories</a></li>
-                                <li><a>Highlights</a></li>
-                            </ul>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="/pages/who-we-are.html">Who we are</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="/pages/the-group.html">The Group</a>
-                    </li>
-                </ul>
-          </div>
+  <!--Elementi della barra -->
+  <div class="collapse navbar-collapse navbar-ex1-collapse">
+    <ul class="nav navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Devices<span class="caret"></span></a>
+                    <ul class="dropdown-menu ">
+                        <li><a href="/pages/all-devices.html">All Devices</a></li>
+                        <li><a href="/pages/device-category.html">Categories</a></li>
+                        <li><a href="/pages/device-promotions.html">Promotions</a></li>
+                    </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a  class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Smart Life<span class="caret"></span></a>
+                    <ul class="dropdown-menu ">
+                        <li><a href="/pages/all-smart-life.html">All Smart Life</a></li>
+                        <li><a href="/pages/smartlife-categories.html">Categories</a></li>
+                        <li><a>Promotions</a></li>
+                    </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Assistance Service<span class="caret"></span></a>
+                    <ul class="dropdown-menu ">
+                        <li><a href="/pages/all-as.html">All Assistance Services</a></li>
+                        <li><a href="/pages/as-categories.html">Categories</a></li>
+                        <li><a href="/pages/highlights.html">Highlights</a></li>
+                    </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/pages/who-we-are.html">Who we are</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/pages/the-group.html">The Group</a>
+            </li>
+        </ul>
+  </div>
 
-        </nav>
+</nav>
     
         <div class="container">
             <div id="testimonial" class="jumbotron">
