--- a/pages/all-smart-life.html
+++ b/pages/all-smart-life.html
@@ -82,7 +82,7 @@
         
     <!--Fine Barra introduttiva titolo-->
         
-<div class="container">
+<div class="container" id="prova">
         <div class = "list-group">
            <a href = "#" class = "list-group-item active">
               <h4 class = "list-group-item-heading">
