aggiunti header e corretti piccoli errori
media query da fare

--- a/index.html
+++ b/index.html
@@ -72,12 +72,14 @@
 </nav>
     
     <!-- Slider -->
-    <ul class="bxslider">
-        <li><img src="/img/slider/banner-hp-tim-4g-gratis.jpg" /></li>
-        <li><img src="/img/slider/banner-hp-tim-young-junior.jpg" ></li>
-        <li><img src="/img/slider/banner_hp_tim_sky_mar2016.jpg" /></li>
-        <li><img src="/img/slider/banner_hp_prodotti_rate.jpg" /></li>
-      </ul>
+    <div class="container">
+        <ul class="bxslider">
+            <li><img src="/img/slider/banner-hp-tim-4g-gratis.jpg" /></li>
+            <li><img src="/img/slider/banner-hp-tim-young-junior.jpg" ></li>
+            <li><img src="/img/slider/banner_hp_tim_sky_mar2016.jpg" /></li>
+            <li><img src="/img/slider/banner_hp_prodotti_rate.jpg" /></li>
+          </ul>
+    </div>
     <!-- fine slider -->
 
     <div class="container">
@@ -114,13 +116,14 @@
             </div>
         </div>
       </div>
+</div> <!-- /container -->
 
       <footer class="footer">
       <div class="container">
         <p class="text-muted">&copy; Tim Company 2016</p>
       </div>
     </footer>
-    </div> <!-- /container -->
+    
 
 
     <!-- Bootstrap core JavaScript
