sistemata home responsive

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <a class="navbar-brand" href="index.html"><img src="img/logo_tim.png"></a>
   </div>
 
-  <!—Elementi della barra -->
+  <!--Elementi della barra -->
   <div class="collapse navbar-collapse navbar-ex1-collapse">
     <ul class="nav navbar-nav">
             <li class="nav-item">
@@ -73,12 +73,14 @@
     
     <!-- Slider -->
     <div class="container">
+        <div id="media-slider">
         <ul class="bxslider">
             <li><img src="/img/slider/banner-hp-tim-4g-gratis.jpg" /></li>
             <li><img src="/img/slider/banner-hp-tim-young-junior.jpg" ></li>
             <li><img src="/img/slider/banner_hp_tim_sky_mar2016.jpg" /></li>
             <li><img src="/img/slider/banner_hp_prodotti_rate.jpg" /></li>
           </ul>
+        </div>
     </div>
     <!-- fine slider -->
 
