sistemata device promotions

--- a/pages/device-promotions.html
+++ b/pages/device-promotions.html
@@ -89,7 +89,8 @@
                 <h3>
                     <a href="#">iPhone 6S</a>
                 </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <a href="#" class="btn btn-primary" role="button">View More</a>
             </div>
             <div class="col-md-4 portfolio-item">
                 <a href="#">
@@ -99,6 +100,7 @@
                     <a href="#">Project Name</a>
                 </h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <a href="#" class="btn btn-primary" role="button">View More</a>
             </div>
             <div class="col-md-4 portfolio-item">
                 <a href="#">
@@ -108,6 +110,7 @@
                     <a href="#">Project Name</a>
                 </h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <a href="#" class="btn btn-primary" role="button">View More</a>
             </div>
         </div>
         <!-- /.row -->
@@ -122,6 +125,7 @@
                     <a href="#">Project Name</a>
                 </h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <a href="#" class="btn btn-primary" role="button">View More</a>
             </div>
             <div class="col-md-4 portfolio-item">
                 <a href="#">
@@ -131,6 +135,7 @@
                     <a href="#">Project Name</a>
                 </h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <a href="#" class="btn btn-primary" role="button">View More</a>
             </div>
             <div class="col-md-4 portfolio-item">
                 <a href="#">
@@ -140,6 +145,7 @@
                     <a href="#">Project Name</a>
                 </h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <a href="#" class="btn btn-primary" role="button">View More</a>
             </div>
         </div>
 
@@ -153,6 +159,7 @@
                     <a href="#">Project Name</a>
                 </h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <a href="#" class="btn btn-primary" role="button">View More</a>
             </div>
             <div class="col-md-4 portfolio-item">
                 <a href="#">
@@ -162,6 +169,7 @@
                     <a href="#">Project Name</a>
                 </h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <a href="#" class="btn btn-primary" role="button">View More</a>
             </div>
             <div class="col-md-4 portfolio-item">
                 <a href="#">
@@ -171,6 +179,7 @@
                     <a href="#">Project Name</a>
                 </h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <a href="#" class="btn btn-primary" role="button">View More</a>
             </div>
         </div>
         <!-- /.row -->
