--- a/pages/all-devices.html
+++ b/pages/all-devices.html
@@ -15,7 +15,8 @@
 
   </head>
 
-    <body>
+   
+<body>
 <!-- Navbar -->   
 <nav class="navbar navbar-default" role="navigation">
 
@@ -172,7 +173,9 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
+    
     <script>window.jQuery || document.write("<script src="js/jquery.min.js"><\/script>")</script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/filter/jquery-2.1.1.js"></script>
     <script src="/js/filter/jquery.mixitup.min.js"></script>
