--- a/pages/all-as.html
+++ b/pages/all-as.html
@@ -84,7 +84,7 @@
         
 <div class="container " id="contenuto">
     <div class="row">
-        <div class = "list-group ">
+        <div class = "list-group col-md-3 col-xs-12">
            <a href = "#" class = "list-group-item active">
               <h4 class = "list-group-item-heading">
                  Line Management
@@ -130,7 +130,7 @@
 
         </div>
 
-        <div class = "list-group">
+        <div class = "list-group col-md-3 col-xs-12">
            <a href = "#" class = "list-group-item active">
               <h4 class = "list-group-item-heading">
                  Costs and Payments
@@ -172,7 +172,7 @@
         </a>
     </div>
 
-        <div class = "list-group">
+        <div class = "list-group col-md-3 col-xs-12 ">
            <a href = "#" class = "list-group-item active">
               <h4 class = "list-group-item-heading">
                  Technical support
@@ -198,7 +198,7 @@
             
         </div>
 
-        <div class = "list-group">
+        <div class = "list-group col-md-3 col-xs-12">
            <a href = "#" class = "list-group-item active">
               <h4 class = "list-group-item-heading">
                  Smart Life
