aggiunti breadcrumb (no responsive)

--- a/index.html
+++ b/index.html
@@ -120,8 +120,11 @@
       </div>
 </div> <!-- /container -->
 
-      <footer class="footer">
+       <footer class="footer">
       <div class="container">
+        <ol class="breadcrumb">
+            <li><a href="/index.html">Home</a></li>
+          </ol>
         <p class="text-muted">&copy; Tim Company 2016</p>
       </div>
     </footer>
