--- a/pages/as-categories.html
+++ b/pages/as-categories.html
@@ -134,6 +134,10 @@
       
     <footer class="footer">
       <div class="container">
+        <ol class="breadcrumb">
+            <li><a href="/index.html">Home</a></li>
+            <li class="active">Assistant Service Categories</li>
+          </ol>
         <p class="text-muted">&copy; Tim Company 2016</p>
       </div>
     </footer>
