--- a/pages/device-category.html
+++ b/pages/device-category.html
@@ -149,6 +149,10 @@ Do you want to know the current promotions and special themes? Visit the Promoti
       
     <footer class="footer">
       <div class="container">
+        <ol class="breadcrumb">
+            <li><a href="/index.html">Home</a></li>
+            <li class="active">Device categories</li>
+          </ol>
         <p class="text-muted">&copy; Tim Company 2016</p>
       </div>
     </footer>
