--- a/pages/device.html
+++ b/pages/device.html
@@ -94,7 +94,7 @@ Chip A9 con coprocessore di movimento M9 integrato
 Fotocamera iSight da 12 megapixel con Focus Pixels, True Tone Flash e Live Photos
 iOS 9 e iCloud</p>
         
-        <h4 id="prezzo">500</h4>
+        <h4 class="prezzo">500</h4>
     </div>
     
     <div class="col-xs-12 col-md-8">
