--- a/pages/all-smart-life.html
+++ b/pages/all-smart-life.html
@@ -140,6 +140,10 @@
       
     <footer class="footer">
       <div class="container">
+        <ol class="breadcrumb">
+            <li><a href="/index.html">Home</a></li>
+            <li class="active">All Smart Life</li>
+          </ol>
         <p class="text-muted">&copy; Tim Company 2016</p>
       </div>
     </footer>
