--- a/pages/smart-promotions.html
+++ b/pages/smart-promotions.html
@@ -75,7 +75,7 @@
         
         <div id="device-cat" class="jumbotron">
             <div class="container" class="img-responsive">
-                <h2>Smart Life / Promotions</h2>
+                <h2>Promotions</h2>
             </div>
         </div>
         
@@ -210,6 +210,10 @@
 
       <footer class="footer">
       <div class="container">
+        <ol class="breadcrumb">
+            <li><a href="/index.html">Home</a></li>
+            <li class="active">Smart Life Promotions</li>
+          </ol>
         <p class="text-muted">&copy; Tim Company 2016</p>
       </div>
     </footer>
