--- a/pages/device-promotions.html
+++ b/pages/device-promotions.html
@@ -11,7 +11,9 @@
     <!-- Bootstrap core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/style.css" rel="stylesheet">
-    
+  
+    <script src="js/jquery.js"></script>
+	<script src="js/script.js"></script>
 
   </head>
 
