--- a/pages/device.html
+++ b/pages/device.html
@@ -80,9 +80,9 @@
         </button>
     <h2 id="titolo">Iphone 6S</h2>
     <div class="col-md-8">
-        <img class="img-responsive left"
-             id="dev" src="/img/device/apple-iPhone6s_Gld-1.jpg">
-        <img class="img-responsive left"  src="/img/device/iphone6s.jpg">
+        <img class="immagine blocco img-responsive left"
+             id="dev" src="/img/device/apple-iPhone6s_Gld.png">
+        <img class="immagine blocco img-responsive left"  src="/img/device/iphone6s.png">
     </div>
     
     <div class="col-md-4">
@@ -120,6 +120,11 @@ iOS 9 e iCloud</p>
     
     <footer class="footer">
       <div class="container">
+        <ol class="breadcrumb">
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/pages/all-devices.html">All Devices</a></li>
+            <li class="active">iPhone6S</li>
+          </ol>
         <p class="text-muted">&copy; Tim Company 2016</p>
       </div>
     </footer>
