--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
 </nav>
     
     <!-- Slider -->
-    <div class="container">
         <div id="media-slider">
         <ul class="bxslider">
             <li><img src="/img/slider/banner-hp-tim-4g-gratis.jpg" /></li>
@@ -81,12 +80,11 @@
             <li><img src="/img/slider/banner_hp_prodotti_rate.jpg" /></li>
           </ul>
         </div>
-    </div>
     <!-- fine slider -->
 
     <div class="container">
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-12">
             <div class="thumbnail">
                 <img src="img/home/blocchetto_timsmart.png">
                 <div class="caption">
@@ -96,7 +94,7 @@
                 </div>
             </div>
           </div>
-        <div class="col-md-4" >
+        <div class="col-md-4 col-sm-12" >
             <div class="thumbnail">
                 <img src="img/home/blocchetto_prodotti.png">
                 <div class="caption">
@@ -107,7 +105,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-12">
             <div class="thumbnail">
                 <img src="img/home/netflix.png">
                 <div class="caption">
