--- a/pages/device-promotions.html
+++ b/pages/device-promotions.html
@@ -12,8 +12,9 @@
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/style.css" rel="stylesheet">
   
-    <script src="js/jquery.js"></script>
-	<script src="js/script.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+   
+	<script src="/js/script2.js"></script>
 
   </head>
 
@@ -199,7 +200,7 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    
     <script>window.jQuery || document.write("<script src="js/jquery.min.js"><\/script>")</script>
     <script src="/js/bootstrap.min.js"></script>
     
