--- a/pages/device-promotions.html
+++ b/pages/device-promotions.html
@@ -14,7 +14,7 @@
   
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
    
-	<script src="/js/script2.js"></script>
+	<script src="/js/dv-promotions.js"></script>
 
   </head>
 
