--- a/pages/device-promotions.html
+++ b/pages/device-promotions.html
@@ -84,15 +84,15 @@
         
 <!--Fine Barra introduttiva titolo-->
 <div class="container">
-    <div class="row" id="dvPRbl">
+    <div class="row " id="dvPRbl">
             <div class="col-md-4 portfolio-item">
                 <a href="#">
                     <img class="img-responsive" src="" alt="">
                 </a>
-                <h3>
+                <h5>
                     <a href="#"></a>
-                </h3>
-                <p></p>
+                </h5>
+                <p class="prezzo"></p>
                 <a href="#" class="btn btn-primary" role="button">View More</a>
             </div>
         </div>
