sistemato breadcrumbs responsive

--- a/pages/device.html
+++ b/pages/device.html
@@ -8,7 +8,7 @@
 
     <title>TIM Website</title>
 
-    <!-- Bootstrap core CSS -->
+    <!-- CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/style.css" rel="stylesheet">
     
@@ -120,8 +120,9 @@ iOS 9 e iCloud</p>
             <li><a href="/index.html">Home</a></li>
             <li><a href="/pages/all-devices.html">All Devices</a></li>
             <li class="active">iPhone6S</li>
+            <p class="text-muted">&copy; Tim Company 2016</p>
           </ol>
-        <p class="text-muted">&copy; Tim Company 2016</p>
+        
       </div>
     </footer>
 
