creata smartlife categ e smartlife generica (da collegare)

--- a/pages/smartlife-categories.html
+++ b/pages/smartlife-categories.html
@@ -113,7 +113,7 @@ A new approach to the world of e-payment and digital identity.  </p>
                     
                     <img src="/img/smart-categories/01_Intrattenimento_0.png" />
                     <div class="caption">
-                        <h3>TV & Entertainment</h3>
+                        <h3><a href="/pages/tv-entert.html">TV & Entertainment</a></h3>
                     
                     </div>
                 </div>
