--- a/pages/tv-entert.html
+++ b/pages/tv-entert.html
@@ -113,7 +113,7 @@
     segui tutte le tue passioni scegliendo tra i magazine più amati e sfoglia
     il tuo quotidiano dalle prime ore del mattino.
     Su TIMreading trovi ciò che ami leggere, dove e quando vuoi.</p>
-                    <p><a class="btn btn-primary btn-lg" href="#" role="button">Read more</a></p>
+                    <p><a class="btn btn-primary btn-lg" href="/pages/smartlife-generica.html" role="button">Read more</a></p>
                 </div>
             </div>
             
@@ -140,8 +140,9 @@
     <footer class="footer">
       <div class="container">
         <ol class="breadcrumb">
-            <li><a href="/index.html">Home</a></li>
-            <li class="active">Smart Life Categories</li>
+            
+            <li><a href="/pages/smartlife-categories.html">S.L. Categories</a></li>
+            <li class="active">TV & Entertainment</li>
           </ol>
         <p class="text-muted">&copy; Tim Company 2016</p>
       </div>
