--- a/pages/smartlife-generica.html
+++ b/pages/smartlife-generica.html
@@ -124,8 +124,9 @@
                         <h4 class="prezzo-smart">19.90$/month</h4>
                 </div>
                 <div class="col-md-6">
-                    <button id="link1" type="button" class="btn btn-primary btn-lg">Large button</button>
-                <button id="link2" type="button" class="btn btn-primary btn-lg">Large button</button>
+                    <a href="/pages/tv-entert.html" id="link1" type="button" class="btn btn-primary "><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span>Return to category</a>
+                    
+                    <a href="/pages/smart-faq.html" id="link2" type="button" class="btn btn-primary "><span class="glyphicon  glyphicon-question-sign" aria-hidden="true"></span>Go to FAQ</a>
                 </div>
             </div><!--chiuso row-->
                 
