--- a/pages/as.html
+++ b/pages/as.html
@@ -26,7 +26,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="index.html"><img src="/img/logo_tim.png"></a>
+    <a class="navbar-brand" href="/index.html"><img src="/img/logo_tim.png"></a>
   </div>
 
   <!--Elementi della barra -->
