fatta anche device-promotions

--- a/pages/device-promotions.html
+++ b/pages/device-promotions.html
@@ -81,11 +81,10 @@
                 <h2>Promotions</h2>
             </div>
         </div>
-        
 <!--Fine Barra introduttiva titolo-->
 <div class="container">
     <div class="row " id="dvPRbl">
-            <div class="col-md-4 portfolio-item">
+        <!--    <div class="col-md-4 portfolio-item">
                 <a href="#">
                     <img class="img-responsive" src="" alt="">
                 </a>
@@ -94,7 +93,7 @@
                 </h5>
                 <p class="prezzo"></p>
                 <a href="#" class="btn btn-primary" role="button">View More</a>
-            </div>
+        -->    </div>
         </div>
         <!-- /.row -->
 
