--- a/pages/all-devices.html
+++ b/pages/all-devices.html
@@ -94,8 +94,8 @@
 						<a data-type="all" href="#0">All</a> <!-- selected option on mobile -->
 					</li> 
 					<li class="filter"><a class="selected" href="#0" data-type="all">All</a></li>
-					<li class="filter" data-filter=".color-1"><a href="#0" data-type="color-1">Smartphone</a></li>
-					<li class="filter" data-filter=".color-2"><a href="#0" data-type="color-2">Tablet</a></li>
+					<li class="filter" data-filter=".color-1"><a href="#0" data-type="color-1">Smartphones</a></li>
+					<li class="filter" data-filter=".color-2"><a href="#0" data-type="color-2">Tablets</a></li>
                     <li class="filter" data-filter=".color-3"><a href="#0" data-type="color-3">Smart Living</a></li>
 				</ul> <!-- cd-filters -->
 			</div> <!-- cd-tab-filter -->
@@ -171,7 +171,7 @@
     <footer class="footer">
       <div class="container">
         <ol class="breadcrumb">
-            <li><a href="/index.html">Home</a></li>
+            
             <li class="active">All Devices</li>
           </ol>
         <p class="text-muted">&copy; Tim Company 2016</p>
