--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
             <div class="thumbnail">
                 <img src="img/home/blocchetto_timsmart.png">
                 <div class="caption">
-                    <h2>TIM Smart</h2>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                    <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                    <a href="/pages/smartlife-categories.html"><h2>TIM Smart</h2></a>
+                    <p>Discover our smart life services in one click! </p>
+                    <p><a class="btn btn-default" href="/pages/smartlife-categories.html" role="button">View details &raquo;</a></p>
                 </div>
             </div>
           </div>
@@ -98,10 +98,10 @@
             <div class="thumbnail">
                 <img src="img/home/blocchetto_prodotti.png">
                 <div class="caption">
-                    <h2>Devices</h2>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                    <a href="/pages/device-category.html"><h2>Devices</h2></a>
+                    <p>Read more about our catalogue of smartphones, tablets and TVs. </p>
                 
-                    <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                    <p><a class="btn btn-default" href="/pages/device-category.html" role="button">View details &raquo;</a></p>
                 </div>
             </div>
         </div>
@@ -110,7 +110,7 @@
                 <img src="img/home/netflix.png">
                 <div class="caption">
                     <h2>Netflix</h2>
-                    <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+                    <p>Now on sale with TIMhome.</p>
                     <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
                 </div>
             </div>
