--- a/pages/all-devices.html
+++ b/pages/all-devices.html
@@ -101,21 +101,11 @@
 			</div> <!-- cd-tab-filter -->
 		</div> <!-- cd-tab-filter-wrapper -->
 
+    
 		<section class="cd-gallery">
 			<ul>
-                <div id="dv"><!--
-                    <li class="mix color-1 check2"><img src="/img/filter/apple-iPhone6s_Gld-1.jpg" alt="Image 1"></li>
-				<li class="mix color-1 check1"><img src="/img/filter/blocchetto_lg_k10_black.png" alt="Image 2"></li>
-				<li class="mix color-3 check2"><img src="/img/filter/apple-watch38_black_blocchetto.png" alt="Image 3"></li>
-				<li class="mix color-2 check2"><img src="/img/filter/APPLE_IPAD_97_spacegrey_01.png" alt="Image 4"></li>
-				<li class="mix color-2 check2"><img src="/img/filter/blocchetto_ipad-air-2-silver-1.jpg" alt="Image 5"></li>
-				<li class="mix color-2 check1"><img src="/img/filter/blocchetto_samsung-galaxy-tab-a-9.7-white-1.jpg" alt="Image 6"></li>
-				<li class="mix color-3 check1"><img src="/img/filter/CHROMECAST-2.jpg" alt="Image 7"></li>
-				<li class="mix color-3 check1"><img src="/img/filter/gear_vr_3_760x760.jpg" alt="Image 8"></li>
-				<li class="mix color-4 check3"><img src="/img/filter/modem-wifi-tim-4g-lte-1.jpg" alt="Image 9"></li>
-				<li class="mix color-4 check3"><img src="/img/filter/blocchetto_modem_fibra_tim_01.png" alt="Image 10"></li>
-				<li class="mix color-1 check1"><img src="/img/filter/blocchetto_lg-g4-leather-brown-1.jpg" alt="Image 11"></li>
-				<li class="mix color-3 check3"><img src="/img/filter/samsung_smart_tv_50JU6400_blocchetto.png" alt="Image 12"></li>-->
+                <div id="dv">
+                    <!-- Riempito da DB -->
                 </div>
 				<li class="gap"></li>
 				<li class="gap"></li>
@@ -124,6 +114,9 @@
 			<div class="cd-fail-message">No results found</div>
 		</section> <!-- cd-gallery -->
 
+    <script> deviceALL()</script>
+
+    
 		<div class="cd-filter">
 			<form>
 
