--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <div class="caption">
                     <h2>Netflix</h2>
                     <p>Now on sale with TIMhome.</p>
-                    <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                    <p><a class="btn btn-default disabled" href="#" role="button">View details &raquo;</a></p>
                 </div>
             </div>
         </div>
