--- a/pages/all-devices.html
+++ b/pages/all-devices.html
@@ -68,7 +68,7 @@
               <a class="nav-link" href="/pages/who-we-are.html">Who we are</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/pages/the-group.html">The Group</a>
+              <a class="nav-link" >The Group</a>
             </li>
         </ul>
   </div>
