--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script>window.jQuery || document.write("<script src="js/jquery.min.js"><\/script>")</script>
+    <script>window.jQuery || document.write("<script src='js/jquery.min.js'><\/script>")</script>
     <script src="js/bootstrap.min.js"></script>
     <!-- bxSlider Javascript file -->
     <script src="js/jquery.bxslider.min.js"></script>
