Finita parte Smart LIfe

--- a/pages/tv-entert.html
+++ b/pages/tv-entert.html
@@ -113,7 +113,7 @@
     segui tutte le tue passioni scegliendo tra i magazine più amati e sfoglia
     il tuo quotidiano dalle prime ore del mattino.
     Su TIMreading trovi ciò che ami leggere, dove e quando vuoi.</p>
-                    <p><a class="btn btn-primary btn-lg" href="/pages/smartlife-generica.html" role="button">Read more</a></p>
+                    <p><a class="btn btn-primary btn-lg" href="/pages/smartlife-generica.php?nome=TIMreading&tipo=TV-Entertainment" role="button">Read more</a></p>
                 </div>
             </div>
             
