Finito di aggiustare Smart Life

--- a/pages/all-smart-life.html
+++ b/pages/all-smart-life.html
@@ -124,7 +124,7 @@
         <h1>Personal Services
             <p><a class="btn btn-primary btn-lg disabled" href="#" role="button">Payments</a></p>
             
-            <p><a class="btn btn-primary btn-lg" href="#" role="button">Transport</a></p>
+            <p><a class="btn btn-primary btn-lg" href="/pages/smartlife-generica.php?nome=Transport&tipo=Personal services" role="button">Transport</a></p>
             
             <p><a class="btn btn-primary btn-lg disabled" href="#" role="button">Fidelity Card</a></p>
             <p><a class="btn btn-primary btn-lg disabled" href="#" role="button">Coupon</a></p>
