--- a/pages/personal-serv.html
+++ b/pages/personal-serv.html
@@ -107,7 +107,7 @@
             <div class="page-header" id="transport">
                 <div id="testobanner2" class="center-block">
                     <h1>Transport </h1><p>Buy transport tickets of your city, through the SMS ticketing service. Check now if the service is already available in your city!</p>
-                    <p><a class="btn btn-primary btn-lg" href="/pages/smartlife-generica.html" role="button">Read more</a></p>
+                    <p><a class="btn btn-primary btn-lg" href="/pages/smartlife-generica.php?nome=Transport&tipo=Personal services" role="button">Read more</a></p>
                 </div>
             </div>
             
