--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
     <!-- Slider -->
     <div id="media-slider">
         <ul class="bxslider">
-            <li><img src="/img/slider/banner-hp-tim-4g-gratis.jpg" /></li>
-            <li><img src="/img/slider/banner-hp-tim-young-junior.jpg" ></li>
-            <li><img src="/img/slider/banner_hp_tim_sky_mar2016.jpg" /></li>
-            <li><img src="/img/slider/banner_hp_prodotti_rate.jpg" /></li>
+            <li><img src="/img/slider/slider1.jpg" /></li>
+            <li><img src="/img/slider/slider2.jpg" ></li>
+            <li><img src="/img/slider/slider3.jpg" /></li>
+            <li><img src="/img/slider/slider4.jpg" /></li>
           </ul>
     </div>
     <!-- fine slider -->
