--- a/pages/all-as.html
+++ b/pages/all-as.html
@@ -63,7 +63,7 @@
               <a class="nav-link" href="/pages/who-we-are.html">Who we are</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" >The Group</a>
+              The Group
             </li>
         </ul>
   </div>
