finita innov e collegata

--- a/pages/who-we-are.html
+++ b/pages/who-we-are.html
@@ -76,7 +76,10 @@
             <div id="testimonial" class="jumbotron">
                 <h1>Tim Berners-Lee</h1>
                 <p>"When you look at the Web it's like observing the whole of humanity."</p>
-                <p><a class="btn btn-primary btn-lg youtube"  href="https://www.youtube.com/watch?v=-rxy9lI8-7Q&feature=youtu.be">Video</a></p>
+                <p><a class="btn btn-primary btn-lg youtube"  href="https://www.youtube.com/watch?v=-rxy9lI8-7Q&feature=youtu.be">Video</a>
+                <a class="btn btn-primary btn-lg"  href="/pages/innov.html">Innovation and Projects</a>
+                
+                </p>
             </div>
             
             <div class="row">
